WIP responsive sidebar

--- a/_sass/yolo/brand/theme/_neon.scss
+++ b/_sass/yolo/brand/theme/_neon.scss
@@ -1,9 +1,9 @@
 // ----------------------------------------------------------------------------
 // neon font-families
 // ----------------------------------------------------------------------------
-$font-family-primary: "Montserrat", sans-serif;
-$font-family-secondary: "Poppins", sans-serif;
-$font-family-monospace: "JetBrains Mono", monospace;
+$font-family-primary: "Noto Sans", sans-serif;
+$font-family-secondary: "Noto Sans Display", sans-serif;
+$font-family-monospace: "Noto Sans Mono", monospace;
 // ----------------------------------------------------------------------------
 // neon light-mode
 // ----------------------------------------------------------------------------
