--- a/_sass/yolo/components/_navigation.scss
+++ b/_sass/yolo/components/_navigation.scss
@@ -4,7 +4,7 @@
     line-height: 1;
     list-style-type: none;
     margin-bottom: 0;
-    padding: 0.75rem 0.5rem 0;
+    padding: 1rem;
 
     li {
       margin-bottom: 0.75rem;
