--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <header>
       {% include components/header.html %}
     </header>
-    <main>{{ content }}</main>
+    <main style="clear: both">{{ content }}</main>
     <footer>
       {% include components/footer.html %}
     </footer>
