--- a/_sass/yolo/brand/syntax/_zoot.scss
+++ b/_sass/yolo/brand/syntax/_zoot.scss
@@ -1,8 +1,8 @@
 // ----------------------------------------------------------------------------
 // zoot light-mode syntax theme
 // ----------------------------------------------------------------------------
-$light-syntax-container-color: #101119;
-$light-syntax-text: #d2d2f3;
+$light-syntax-container-color: #202231;
+$light-syntax-text: #edf2f4;
 $light-syntax-comment-hashbang: #8f8f8f;
 $light-syntax-comment-multiline: #8f8f8f;
 $light-syntax-comment-preproc: #8f8f8f;
@@ -80,7 +80,7 @@ $light-syntax-text-whitespace: #fff;
 // ----------------------------------------------------------------------------
 // zoot dark-mode syntax theme
 // ----------------------------------------------------------------------------
-$dark-syntax-container-color: #f3f4f7;
+$dark-syntax-container-color: #edf2f4;
 $dark-syntax-text: #101119;
 $dark-syntax-comment-hashbang: #8f8f8f;
 $dark-syntax-comment-multiline: #8f8f8f;
