--- a/_sass/yolo/brand/theme/_grape.scss
+++ b/_sass/yolo/brand/theme/_grape.scss
@@ -8,35 +8,35 @@ $font-family-monospace: "Source Code Pro", monospace;
 // grape light-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$light-primary-color: #f3e6f5;
-$light-on-primary-color: #4a138c;
-$light-primary-container-color: #4a138c;
-$light-on-primary-container-color: #fff0f3;
+$light-primary-color: #f4edfd;
+$light-on-primary-color: #390f6c;
+$light-primary-container-color: #8128ed;
+$light-on-primary-container-color: #f4edfd;
 // secondary colors  
-$light-secondary-color: #4a138c;
-$light-on-secondary-color: #f3e6f5;
-$light-secondary-container-color: #4a138c;
-$light-on-secondary-container-color: #f3e6f5;
+$light-secondary-color: #390f6c;
+$light-on-secondary-color: #f4edfd;
+$light-secondary-container-color: #390f6c;
+$light-on-secondary-container-color: #f4edfd;
 // tertiary colors
-$light-tertiary-color: #ab00ff;
-$light-on-tertiary-color: #f3e6f5;
+$light-tertiary-color: #9a2fff;
+$light-on-tertiary-color: #f4edfd;
 // link colors
-$light-link-color: #ab00ff;
+$light-link-color: #4493ef;
 // ----------------------------------------------------------------------------
 // grape dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$dark-primary-color: #4a138c;
-$dark-on-primary-color: #f3e6f5;
-$dark-primary-container-color: #f3e6f5;
-$dark-on-primary-container-color: #4a138c;
+$dark-primary-color:#390f6c;
+$dark-on-primary-color: #f4edfd;
+$dark-primary-container-color: #8128ed;
+$dark-on-primary-container-color: #f4edfd;
 // secondary colors  
-$dark-secondary-color: #f3e6f5;
-$dark-on-secondary-color: #4a138c;
-$dark-secondary-container-color: #f3e6f5;
-$dark-on-secondary-container-color: #4a138c;
+$dark-secondary-color: #f4edfd;
+$dark-on-secondary-color: #390f6c;
+$dark-secondary-container-color: #f4edfd;
+$dark-on-secondary-container-color: #390f6c;
 // tertiary colors
-$dark-tertiary-color: #c349ff;
-$dark-on-tertiary-color: #4a138c;
+$dark-tertiary-color: #a648ff;
+$dark-on-tertiary-color: #390f6c;
 // link colors
-$dark-link-color: #c349ff;
+$dark-link-color: #4493ef;
