--- a/_sass/yolo/brand/theme/_yolo.scss
+++ b/_sass/yolo/brand/theme/_yolo.scss
@@ -8,35 +8,35 @@ $font-family-monospace: "Source Code Pro", monospace;
 // yolo light-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$light-primary-color: #d7fee1;
-$light-on-primary-color: #13137d;
-$light-primary-container-color: #4ffa7b;
-$light-on-primary-container-color: #0d0e59;
+$light-primary-color: #dee1f7;
+$light-on-primary-color: #060823;
+$light-primary-container-color: #251359;
+$light-on-primary-container-color: #bf3efd;
 // secondary colors
-$light-secondary-color: #1818a2;
-$light-on-secondary-color: #d7fee1;
-$light-secondary-container-color: #ebfff0;
-$light-on-secondary-container-color: #00a42c;
+$light-secondary-color: #1042ff;
+$light-on-secondary-color: #ebefff;
+$light-secondary-container-color: #251359;
+$light-on-secondary-container-color: #bf3efd;
 // tertiary colors
-$light-tertiary-color: #21daff;
-$light-on-tertiary-color: #d7fee1;
+$light-tertiary-color: #f9246c;
+$light-on-tertiary-color: #feebf2;
 // link colors
-$light-link-color: #00b3ce;
-// -----------------------------------#ebfff0-----------------------------------------
+$light-link-color: #00ce35;
+// ----------------------------------------------------------------------------
 // yolo dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$dark-primary-color: #080836;
-$dark-on-primary-color: #b0fdc3;
-$dark-primary-container-color: #0d0e59;
-$dark-on-primary-container-color: #4ffa7b;
-// secondary colors  
-$dark-secondary-color: #4ffa7b;
-$dark-on-secondary-color: #0d0e59;
-$dark-secondary-container-color: #0d0e59;
-$dark-on-secondary-container-color: #d7f8ff;
+$dark-primary-color: #060823;
+$dark-on-primary-color: #cacef7;
+$dark-primary-container-color: #251359;
+$dark-on-primary-container-color: #bf3efd;
+// secondary colors
+$dark-secondary-color: #f9246c;
+$dark-on-secondary-color: #090b35;
+$dark-secondary-container-color: #251359;
+$dark-on-secondary-container-color: #bf3efd;
 // tertiary colors
-$dark-tertiary-color: #21daff;
-$dark-on-tertiary-color: #0a0b47;
+$dark-tertiary-color: #3b6afe;
+$dark-on-tertiary-color: #090b35;
 // link colors
-$dark-link-color: #21daff;
+$dark-link-color: #4ffa7b;
