--- a/_sass/yolo/brand/syntax/_minimal.scss
+++ b/_sass/yolo/brand/syntax/_minimal.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// black-white light-mode syntax theme
+// minimal light-mode syntax theme
 // ----------------------------------------------------------------------------
 $light-syntax-comment-hashbang: #fff;
 $light-syntax-comment-multiline: #fff;
@@ -78,7 +78,7 @@ $light-syntax-string: #fff;
 $light-syntax-text-whitespace: #fff;
 $light-syntax-text: #fff;
 // ----------------------------------------------------------------------------
-// black-white dark-mode syntax theme
+// minimal dark-mode syntax theme
 // ----------------------------------------------------------------------------
 $dark-syntax-comment-hashbang: #000;
 $dark-syntax-comment-multiline: #000;
