--- a/_sass/yolo/brand/syntax/_yolo.scss
+++ b/_sass/yolo/brand/syntax/_yolo.scss
@@ -1,158 +1,158 @@
 // ----------------------------------------------------------------------------
 // yolo light-mode syntax theme
 // ----------------------------------------------------------------------------
-$light-syntax-container-color: #ebfff0;
-$light-syntax-text: #080836;
-$light-syntax-comment-hashbang: #44475a;
-$light-syntax-comment-multiline: #44475a;
-$light-syntax-comment-preproc: #44475a;
-$light-syntax-comment-preprocfile: #44475a;
-$light-syntax-comment-single: #44475a;
-$light-syntax-comment-special: #44475a;
-$light-syntax-comment: #44475a;
+$light-syntax-text: #cacef7;
+$light-syntax-container-color: #241057;
+$light-syntax-highlight-line: #f9246c;
 $light-syntax-error: #b71c1c;
+$light-syntax-punctuation: #4f9dff;
+$light-syntax-text-whitespace: #cacef7;
+$light-syntax-comment-hashbang: #b5036a;
+$light-syntax-comment-multiline: #b5036a;
+$light-syntax-comment-preproc: #b5036a;
+$light-syntax-comment-preprocfile: #b5036a;
+$light-syntax-comment-single: #b5036a;
+$light-syntax-comment-special: #b5036a;
+$light-syntax-comment: #b5036a;
 $light-syntax-generic-deleted: #b71c1c;
-$light-syntax-generic-emph: #080836;
-$light-syntax-generic-error: #080836;
-$light-syntax-generic-heading: #080836;
-$light-syntax-generic-inserted: #080836;
-$light-syntax-generic-output: #080836;
-$light-syntax-generic-prompt: #00a42c;
-$light-syntax-generic-strong: #00a42c;
-$light-syntax-generic-subheading: #080836;
-$light-syntax-generic-traceback: #080836;
-$light-syntax-highlight-line: #44475a;
-$light-syntax-keyword-constant: #13137d;
-$light-syntax-keyword-declaration: #0ca9f4;
-$light-syntax-keyword-namespace: #13137d;
-$light-syntax-keyword-pseudo: #13137d;
-$light-syntax-keyword-reserved: #13137d;
-$light-syntax-keyword-type: #0ca9f4;
-$light-syntax-keyword: #13137d;
-$light-syntax-literal-date: #080836;
-$light-syntax-literal: #080836;
-$light-syntax-name-attribute: #00c032;
-$light-syntax-name-builtin-pseudo: #080836;
+$light-syntax-generic-emph: #cacef7;
+$light-syntax-generic-error: #cacef7;
+$light-syntax-generic-heading: #cacef7;
+$light-syntax-generic-inserted: #cacef7;
+$light-syntax-generic-output: #cacef7;
+$light-syntax-generic-prompt: #f9246c;
+$light-syntax-generic-strong: #f9246c;
+$light-syntax-generic-subheading: #cacef7;
+$light-syntax-generic-traceback: #cacef7;
+$light-syntax-keyword-constant: #f9246c;
+$light-syntax-keyword-declaration: #3b6afe;
+$light-syntax-keyword-namespace: #f9246c;
+$light-syntax-keyword-pseudo: #f9246c;
+$light-syntax-keyword-reserved: #f9246c;
+$light-syntax-keyword-type: #3b6afe;
+$light-syntax-keyword: #f9246c;
+$light-syntax-literal-date: #cacef7;
+$light-syntax-literal: #cacef7;
+$light-syntax-name-attribute: #50fa7b;
+$light-syntax-name-builtin-pseudo: #cacef7;
 $light-syntax-name-builtin: #0ca9f4;
-$light-syntax-name-class: #00c032;
-$light-syntax-name-constant: #080836;
-$light-syntax-name-decorator: #080836;
-$light-syntax-name-entity: #080836;
-$light-syntax-name-exception: #080836;
-$light-syntax-name-function-magic: #00c032;
-$light-syntax-name-function: #00c032;
-$light-syntax-name-label: #00c032;
-$light-syntax-name-namespace: #080836;
-$light-syntax-name-other: #080836;
-$light-syntax-name-property: #00c032;
-$light-syntax-name-tag: #13137d;
+$light-syntax-name-class: #50fa7b;
+$light-syntax-name-constant: #cacef7;
+$light-syntax-name-decorator: #cacef7;
+$light-syntax-name-entity: #cacef7;
+$light-syntax-name-exception: #cacef7;
+$light-syntax-name-function-magic: #50fa7b;
+$light-syntax-name-function: #50fa7b;
+$light-syntax-name-label: #50fa7b;
+$light-syntax-name-namespace: #cacef7;
+$light-syntax-name-other: #cacef7;
+$light-syntax-name-property: #50fa7b;
+$light-syntax-name-tag: #f9246c;
 $light-syntax-name-variable-class: #0ca9f4;
 $light-syntax-name-variable-global: #0ca9f4;
 $light-syntax-name-variable-instance: #0ca9f4;
 $light-syntax-name-variable-magic: #0ca9f4;
 $light-syntax-name-variable: #0ca9f4;
-$light-syntax-name: #080836;
-$light-syntax-number-bin: #00a42c;
-$light-syntax-number-float: #00a42c;
-$light-syntax-number-hex: #00a42c;
-$light-syntax-number-integer-long: #00a42c;
-$light-syntax-number-integer: #00a42c;
-$light-syntax-number-oct: #00a42c;
-$light-syntax-number: #00a42c;
-$light-syntax-operator-word: #00c032;
-$light-syntax-operator: #00c032;
-$light-syntax-punctuation: #0ca9f4;
-$light-syntax-string-affix: #7c85fa;
-$light-syntax-string-backtick: #7c85fa;
-$light-syntax-string-char: #7c85fa;
-$light-syntax-string-delimiter: #7c85fa;
-$light-syntax-string-doc: #7c85fa;
-$light-syntax-string-double: #1818a2;
-$light-syntax-string-escape: #7c85fa;
-$light-syntax-string-heredoc: #7c85fa;
-$light-syntax-string-interpol: #7c85fa;
-$light-syntax-string-other: #1818a2;
-$light-syntax-string-regex: #7c85fa;
-$light-syntax-string-single: #1818a2;
-$light-syntax-string-symbol: #7c85fa;
-$light-syntax-string: #7c85fa;
-$light-syntax-text-whitespace: #080836;
+$light-syntax-name: #cacef7;
+$light-syntax-number-bin: #b5036a;
+$light-syntax-number-float: #b5036a;
+$light-syntax-number-hex: #b5036a;
+$light-syntax-number-integer-long: #b5036a;
+$light-syntax-number-integer: #b5036a;
+$light-syntax-number-oct: #b5036a;
+$light-syntax-number: #b5036a;
+$light-syntax-operator-word: #50fa7b;
+$light-syntax-operator: #50fa7b;
+$light-syntax-string-affix: #bf3efd;
+$light-syntax-string-backtick: #bf3efd;
+$light-syntax-string-char: #bf3efd;
+$light-syntax-string-delimiter: #bf3efd;
+$light-syntax-string-doc: #bf3efd;
+$light-syntax-string-double: #4f9dff;
+$light-syntax-string-escape: #bf3efd;
+$light-syntax-string-heredoc: #bf3efd;
+$light-syntax-string-interpol: #bf3efd;
+$light-syntax-string-other: #4f9dff;
+$light-syntax-string-regex: #bf3efd;
+$light-syntax-string-single: #4f9dff;
+$light-syntax-string-symbol: #bf3efd;
+$light-syntax-string: #bf3efd;
 // ----------------------------------------------------------------------------
 // yolo dark-mode syntax theme
 // ----------------------------------------------------------------------------
-$dark-syntax-container-color: #0d0e59;
-$dark-syntax-text: #b0fdc3;
-$dark-syntax-comment-hashbang: #b3b6c7;
-$dark-syntax-comment-multiline: #b3b6c7;
-$dark-syntax-comment-preproc: #b3b6c7;
-$dark-syntax-comment-preprocfile: #b3b6c7;
-$dark-syntax-comment-single: #b3b6c7;
-$dark-syntax-comment-special: #b3b6c7;
-$dark-syntax-comment: #b3b6c7;
-$dark-syntax-error: #e34545;
-$dark-syntax-generic-deleted: #e34545;
-$dark-syntax-generic-emph: #b0fdc3;
-$dark-syntax-generic-error: #b0fdc3;
-$dark-syntax-generic-heading: #b0fdc3;
-$dark-syntax-generic-inserted: #b0fdc3;
-$dark-syntax-generic-output: #b0fdc3;
-$dark-syntax-generic-prompt: #00a42c;
-$dark-syntax-generic-strong: #00a42c;
-$dark-syntax-generic-subheading: #b0fdc3;
-$dark-syntax-generic-traceback: #b0fdc3;
-$dark-syntax-highlight-line: #b3b6c7;
-$dark-syntax-keyword-constant: #4ffa7b;
-$dark-syntax-keyword-declaration: #0ca9f4;
-$dark-syntax-keyword-namespace: #4ffa7b;
-$dark-syntax-keyword-pseudo: #4ffa7b;
-$dark-syntax-keyword-reserved: #4ffa7b;
-$dark-syntax-keyword-type: #0ca9f4;
-$dark-syntax-keyword: #4ffa7b;
-$dark-syntax-literal-date: #b0fdc3;
-$dark-syntax-literal: #b0fdc3;
-$dark-syntax-name-attribute: #00c032;
-$dark-syntax-name-builtin-pseudo: #b0fdc3;
+$dark-syntax-text: #cacef7;
+$dark-syntax-container-color: #241057;
+$dark-syntax-highlight-line: #f9246c;
+$dark-syntax-error: #b71c1c;
+$dark-syntax-punctuation: #4f9dff;
+$dark-syntax-text-whitespace: #cacef7;
+$dark-syntax-comment-hashbang: #b5036a;
+$dark-syntax-comment-multiline: #b5036a;
+$dark-syntax-comment-preproc: #b5036a;
+$dark-syntax-comment-preprocfile: #b5036a;
+$dark-syntax-comment-single: #b5036a;
+$dark-syntax-comment-special: #b5036a;
+$dark-syntax-comment: #b5036a;
+$dark-syntax-generic-deleted: #b71c1c;
+$dark-syntax-generic-emph: #cacef7;
+$dark-syntax-generic-error: #cacef7;
+$dark-syntax-generic-heading: #cacef7;
+$dark-syntax-generic-inserted: #cacef7;
+$dark-syntax-generic-output: #cacef7;
+$dark-syntax-generic-prompt: #f9246c;
+$dark-syntax-generic-strong: #f9246c;
+$dark-syntax-generic-subheading: #cacef7;
+$dark-syntax-generic-traceback: #cacef7;
+$dark-syntax-keyword-constant: #f9246c;
+$dark-syntax-keyword-declaration: #3b6afe;
+$dark-syntax-keyword-namespace: #f9246c;
+$dark-syntax-keyword-pseudo: #f9246c;
+$dark-syntax-keyword-reserved: #f9246c;
+$dark-syntax-keyword-type: #3b6afe;
+$dark-syntax-keyword: #f9246c;
+$dark-syntax-literal-date: #cacef7;
+$dark-syntax-literal: #cacef7;
+$dark-syntax-name-attribute: #50fa7b;
+$dark-syntax-name-builtin-pseudo: #cacef7;
 $dark-syntax-name-builtin: #0ca9f4;
-$dark-syntax-name-class: #00c032;
-$dark-syntax-name-constant: #b0fdc3;
-$dark-syntax-name-decorator: #b0fdc3;
-$dark-syntax-name-entity: #b0fdc3;
-$dark-syntax-name-exception: #b0fdc3;
-$dark-syntax-name-function-magic: #00c032;
-$dark-syntax-name-function: #00c032;
-$dark-syntax-name-label: #00c032;
-$dark-syntax-name-namespace: #b0fdc3;
-$dark-syntax-name-other: #b0fdc3;
-$dark-syntax-name-property: #00c032;
-$dark-syntax-name-tag: #4ffa7b;
+$dark-syntax-name-class: #50fa7b;
+$dark-syntax-name-constant: #cacef7;
+$dark-syntax-name-decorator: #cacef7;
+$dark-syntax-name-entity: #cacef7;
+$dark-syntax-name-exception: #cacef7;
+$dark-syntax-name-function-magic: #50fa7b;
+$dark-syntax-name-function: #50fa7b;
+$dark-syntax-name-label: #50fa7b;
+$dark-syntax-name-namespace: #cacef7;
+$dark-syntax-name-other: #cacef7;
+$dark-syntax-name-property: #50fa7b;
+$dark-syntax-name-tag: #f9246c;
 $dark-syntax-name-variable-class: #0ca9f4;
 $dark-syntax-name-variable-global: #0ca9f4;
 $dark-syntax-name-variable-instance: #0ca9f4;
 $dark-syntax-name-variable-magic: #0ca9f4;
 $dark-syntax-name-variable: #0ca9f4;
-$dark-syntax-name: #b0fdc3;
-$dark-syntax-number-bin: #00a42c;
-$dark-syntax-number-float: #00a42c;
-$dark-syntax-number-hex: #00a42c;
-$dark-syntax-number-integer-long: #00a42c;
-$dark-syntax-number-integer: #00a42c;
-$dark-syntax-number-oct: #00a42c;
-$dark-syntax-number: #00a42c;
-$dark-syntax-operator-word: #00c032;
-$dark-syntax-operator: #00c032;
-$dark-syntax-punctuation: #0ca9f4;
-$dark-syntax-string-affix: #7c85fa;
-$dark-syntax-string-backtick: #7c85fa;
-$dark-syntax-string-char: #7c85fa;
-$dark-syntax-string-delimiter: #7c85fa;
-$dark-syntax-string-doc: #7c85fa;
-$dark-syntax-string-double: #4ffa7b;
-$dark-syntax-string-escape: #7c85fa;
-$dark-syntax-string-heredoc: #7c85fa;
-$dark-syntax-string-interpol: #7c85fa;
-$dark-syntax-string-other: #4ffa7b;
-$dark-syntax-string-regex: #7c85fa;
-$dark-syntax-string-single: #4ffa7b;
-$dark-syntax-string-symbol: #7c85fa;
-$dark-syntax-string: #7c85fa;
-$dark-syntax-text-whitespace: #b0fdc3;
+$dark-syntax-name: #cacef7;
+$dark-syntax-number-bin: #b5036a;
+$dark-syntax-number-float: #b5036a;
+$dark-syntax-number-hex: #b5036a;
+$dark-syntax-number-integer-long: #b5036a;
+$dark-syntax-number-integer: #b5036a;
+$dark-syntax-number-oct: #b5036a;
+$dark-syntax-number: #b5036a;
+$dark-syntax-operator-word: #50fa7b;
+$dark-syntax-operator: #50fa7b;
+$dark-syntax-string-affix: #bf3efd;
+$dark-syntax-string-backtick: #bf3efd;
+$dark-syntax-string-char: #bf3efd;
+$dark-syntax-string-delimiter: #bf3efd;
+$dark-syntax-string-doc: #bf3efd;
+$dark-syntax-string-double: #4f9dff;
+$dark-syntax-string-escape: #bf3efd;
+$dark-syntax-string-heredoc: #bf3efd;
+$dark-syntax-string-interpol: #bf3efd;
+$dark-syntax-string-other: #4f9dff;
+$dark-syntax-string-regex: #bf3efd;
+$dark-syntax-string-single: #4f9dff;
+$dark-syntax-string-symbol: #bf3efd;
+$dark-syntax-string: #bf3efd;
