--- a/_sass/yolo/brand/theme/_zoot.scss
+++ b/_sass/yolo/brand/theme/_zoot.scss
@@ -10,33 +10,33 @@ $font-family-monospace: "Red Hat Mono", monospace;
 // primary colors
 $light-primary-color: #edf2f4;
 $light-on-primary-color: #2b2d43;
-$light-primary-container-color: #101119;
+$light-primary-container-color: #a1021e;
 $light-on-primary-container-color: #edf2f4;
 // secondary colors  
-$light-secondary-color: #414363;
+$light-secondary-color: #a1021e;
 $light-on-secondary-color: #edf2f4;
-$light-secondary-container-color: #2b2d43;
-$light-on-secondary-container-color: #edf2f4;
+$light-secondary-container-color: #dbdfe7;
+$light-on-secondary-container-color: #101119;
 // tertiary colors
-$light-tertiary-color: #d90529;
+$light-tertiary-color: #ef243c;
 $light-on-tertiary-color: #edf2f4;
 // link colors
-$light-link-color: #ef243c;
+$light-link-color: #00b3ce;
 // ----------------------------------------------------------------------------
 // zoot dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
 $dark-primary-color: #101119;
-$dark-on-primary-color: #f5f5f5;
-$dark-primary-container-color: #8c041a;
-$dark-on-primary-container-color: #f5f5f5;
+$dark-on-primary-color: #dbdfe6;
+$dark-primary-container-color: #b40322;
+$dark-on-primary-container-color: #dbdfe6;
 // secondary colors  
-$dark-secondary-color: #fff;
+$dark-secondary-color: #d90529;
 $dark-on-secondary-color: #101119;
-$dark-secondary-container-color: #fff;
-$dark-on-secondary-container-color: #101119;
+$dark-secondary-container-color: #202231;
+$dark-on-secondary-container-color: #ef243c;
 // tertiary colors
-$dark-tertiary-color: #fa1137;
+$dark-tertiary-color: #f63950;
 $dark-on-tertiary-color: #101119;
 // link colors
-$dark-link-color: #32cdff;
+$dark-link-color: #31afec;
