--- a/_sass/yolo/components/_sidebar.scss
+++ b/_sass/yolo/components/_sidebar.scss
@@ -4,6 +4,7 @@
 @import "../core/responsiveness";
 
 .sidebar {
+  padding-top: 1rem;
   position: fixed;
   z-index: 50;
   float: left;
@@ -24,7 +25,7 @@
     }
   }
   .sidebar-logo {
-    padding: 1rem;
+    padding: 0.5rem 1.5rem 1.5rem;
   }
 }
 
