--- a/_sass/yolo/brand/theme/_neon.scss
+++ b/_sass/yolo/brand/theme/_neon.scss
@@ -8,18 +8,18 @@ $font-family-monospace: "Noto Sans Mono", monospace;
 // neon light-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$light-primary-color: #fafafa;
+$light-primary-color: #edf2f4;
 $light-on-primary-color: #6a21eb;
 $light-primary-container-color: #ff1573;
-$light-on-primary-container-color: #fafafa;
+$light-on-primary-container-color: #edf2f4;
 // secondary colors  
 $light-secondary-color: #324eff;
-$light-on-secondary-color: #fafafa;
+$light-on-secondary-color: #edf2f4;
 $light-secondary-container-color: #141414;
 $light-on-secondary-container-color: #32ff03;
 // tertiary colors
 $light-tertiary-color: #09b0ff;
-$light-on-tertiary-color: #fafafa;
+$light-on-tertiary-color: #edf2f4;
 // link colors
 $light-link-color: #fc00ff;
 // ----------------------------------------------------------------------------
@@ -27,16 +27,16 @@ $light-link-color: #fc00ff;
 // ----------------------------------------------------------------------------
 // primary colors
 $dark-primary-color: #141414;
-$dark-on-primary-color: #32ff03;
-$dark-primary-container-color: #324eff;
-$dark-on-primary-container-color: #fafafa;
+$dark-on-primary-color: #15c4ff;
+$dark-primary-container-color: #344dff;
+$dark-on-primary-container-color: #edf2f4;
 // secondary colors
 $dark-secondary-color: #ff1573;
 $dark-on-secondary-color: #141414;
-$dark-secondary-container-color: #fafafa;
+$dark-secondary-container-color: #edf2f4;
 $dark-on-secondary-container-color: #6a21eb;
 // tertiary colors
-$dark-tertiary-color: #fc00ff;
+$dark-tertiary-color: #32ff03;
 $dark-on-tertiary-color: #141414;
 // link colors
-$dark-link-color: #ff5941;
+$dark-link-color: #fc00ff;
