--- a/_sass/yolo/brand/theme/_reveal.scss
+++ b/_sass/yolo/brand/theme/_reveal.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // reveal font-families
 // ----------------------------------------------------------------------------
-$font-family-primary: "Inconsolata", monospace;
+$font-family-primary: "Poppins", sans-serif;
 $font-family-secondary: "Montserrat", sans-serif;
 $font-family-monospace: "Source Code Pro", monospace;
 // ----------------------------------------------------------------------------
