--- a/_sass/yolo/brand/theme/_summer.scss
+++ b/_sass/yolo/brand/theme/_summer.scss
@@ -5,7 +5,7 @@ $font-family-primary: "Manrope", sans-serif;
 $font-family-secondary: "Poppins", sans-serif;
 $font-family-monospace: "Roboto Mono", monospace;
 // ----------------------------------------------------------------------------
-// aloha light-mode
+// summer light-mode
 // ----------------------------------------------------------------------------
 // primary colors
 $light-primary-color: #fff6eb;
