--- a/_sass/yolo/brand/theme/_zoot.scss
+++ b/_sass/yolo/brand/theme/_zoot.scss
@@ -9,11 +9,11 @@ $font-family-monospace: "Red Hat Mono", monospace;
 // ----------------------------------------------------------------------------
 // primary colors
 $light-primary-color: #edf2f4;
-$light-on-primary-color: #2b2d43;
+$light-on-primary-color: #393b56;
 $light-primary-container-color: #a1021e;
 $light-on-primary-container-color: #edf2f4;
 // secondary colors  
-$light-secondary-color: #a1021e;
+$light-secondary-color: #2b2d43;
 $light-on-secondary-color: #edf2f4;
 $light-secondary-container-color: #dbdfe7;
 $light-on-secondary-container-color: #101119;
@@ -27,14 +27,14 @@ $light-link-color: #00b3ce;
 // ----------------------------------------------------------------------------
 // primary colors
 $dark-primary-color: #101119;
-$dark-on-primary-color: #dbdfe6;
+$dark-on-primary-color: #f3f4f7;
 $dark-primary-container-color: #b40322;
 $dark-on-primary-container-color: #dbdfe6;
 // secondary colors  
-$dark-secondary-color: #d90529;
+$dark-secondary-color: #c3cad5;
 $dark-on-secondary-color: #101119;
 $dark-secondary-container-color: #202231;
-$dark-on-secondary-container-color: #ef243c;
+$dark-on-secondary-container-color: #f0f3f9;
 // tertiary colors
 $dark-tertiary-color: #f63950;
 $dark-on-tertiary-color: #101119;
