Added pentax theme

--- a/_sass/yolo/brand/theme/_cream.scss
+++ b/_sass/yolo/brand/theme/_cream.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // cream font-families
 // ----------------------------------------------------------------------------
-$font-family-primary: "Hepta Slab", serif;
+$font-family-primary: "Aleo", serif;
 $font-family-secondary: "Raleway", sans-serif;
 $font-family-monospace: "Space Mono", monospace;
 // ----------------------------------------------------------------------------
@@ -9,34 +9,34 @@ $font-family-monospace: "Space Mono", monospace;
 // ----------------------------------------------------------------------------
 // primary colors
 $light-primary-color: #f0f7f6;
-$light-on-primary-color: #062f38;
+$light-on-primary-color: #117e96;
 $light-primary-container-color: #b3f7ef;
-$light-on-primary-container-color: #062f38;
+$light-on-primary-container-color: #0b5f6f;
 // secondary colors  
-$light-secondary-color: #36cceb;
-$light-on-secondary-color: #fffefc;
+$light-secondary-color: #22c8e9;
+$light-on-secondary-color: #f0f7f6;
 $light-secondary-container-color: #e5f1f0;
 $light-on-secondary-container-color: #062f38;
 // tertiary colors
-$light-tertiary-color: #e05299;
+$light-tertiary-color: #1bdec7;
 $light-on-tertiary-color: #f0f7f6;
 // link colors
-$light-link-color: #34c1a5;
+$light-link-color: #1abddf;
 // ----------------------------------------------------------------------------
 // cream dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$dark-primary-color: #030f12;
-$dark-on-primary-color: #f0f7f6;
-$dark-primary-container-color: #b3f7ef;
-$dark-on-primary-container-color: #030f12;
+$dark-primary-color: #f0f7f6;
+$dark-on-primary-color: #8b1852;
+$dark-primary-container-color: #f2b6d4;
+$dark-on-primary-container-color: #791547;
 // secondary colors  
-$dark-secondary-color: #36cceb;
-$dark-on-secondary-color: #030f12;
-$dark-secondary-container-color: #032025;
-$dark-on-secondary-container-color: #f8d6e0;
+$dark-secondary-color: #da2f85;
+$dark-on-secondary-color: #f0f7f6;
+$dark-secondary-container-color: #e5f1f0;
+$dark-on-secondary-container-color: #da4572;
 // tertiary colors
-$dark-tertiary-color: #e05299;
-$dark-on-tertiary-color: #030f12;
+$dark-tertiary-color: #d73364;
+$dark-on-tertiary-color: #f0f7f6;
 // link colors
-$dark-link-color: #34c1a5;
+$dark-link-color: #ff016e;
