--- a/_sass/yolo/brand/theme/_newspaper.scss
+++ b/_sass/yolo/brand/theme/_newspaper.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------
 $font-family-primary: "Hepta Slab", serif;
 $font-family-secondary: "Poppins", sans-serif;
-$font-family-monospace: "IBM Plex Mono", monospace;
+$font-family-monospace: "Courier Prime", monospace;
 // ----------------------------------------------------------------------------
 // newspaper light-mode
 // ----------------------------------------------------------------------------
