Refactor minimal theme

--- a/_sass/yolo/brand/syntax/_mini.scss
+++ b/_sass/yolo/brand/syntax/_mini.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// minimal light-mode syntax theme
+// mini light-mode syntax theme
 // ----------------------------------------------------------------------------
 $light-syntax-comment-hashbang: #fff;
 $light-syntax-comment-multiline: #fff;
@@ -78,7 +78,7 @@ $light-syntax-string: #fff;
 $light-syntax-text-whitespace: #fff;
 $light-syntax-text: #fff;
 // ----------------------------------------------------------------------------
-// minimal dark-mode syntax theme
+// mini dark-mode syntax theme
 // ----------------------------------------------------------------------------
 $dark-syntax-comment-hashbang: #000;
 $dark-syntax-comment-multiline: #000;
