--- a/_sass/yolo/brand/theme/_bleu.scss
+++ b/_sass/yolo/brand/theme/_bleu.scss
@@ -26,17 +26,17 @@ $light-link-color: #7206b7;
 // bleu dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$dark-primary-color: #092a5e;
-$dark-on-primary-color: #e3f2fd;
-$dark-primary-container-color: #bbdefb;
+$dark-primary-color: #00173d;
+$dark-on-primary-color: #aed8ff;
+$dark-primary-container-color: #05adff;
 $dark-on-primary-container-color: #0c3b85;
 // secondary colors  
-$dark-secondary-color: #a3d4ff;
-$dark-on-secondary-color: #092a5e;
-$dark-secondary-container-color: #0f47a2;
-$dark-on-secondary-container-color: #bbdefb;
+$dark-secondary-color: #05adff;
+$dark-on-secondary-color: #00173d;
+$dark-secondary-container-color: #05adff;
+$dark-on-secondary-container-color: #00173d;
 // tertiary colors
-$dark-tertiary-color: #43a5f5;
+$dark-tertiary-color: #47edff;
 $dark-on-tertiary-color: #092a5e;
 // link colors
-$dark-link-color: #b756f4;
+$dark-link-color: #47edff;
