--- a/_sass/yolo/brand/theme/_mini.scss
+++ b/_sass/yolo/brand/theme/_mini.scss
@@ -1,11 +1,11 @@
 // ----------------------------------------------------------------------------
-// minimal font-families
+// mini font-families
 // ----------------------------------------------------------------------------
 $font-family-primary: "Sono", sans-serif;
 $font-family-secondary: "Open Sans", sans-serif;
 $font-family-monospace: "Source Code Pro", monospace;
 // ----------------------------------------------------------------------------
-// minimal light-mode
+// mini light-mode
 // ----------------------------------------------------------------------------
 // primary colors
 $light-primary-color: #fff;
@@ -23,7 +23,7 @@ $light-on-tertiary-color: #fff;
 // link colors
 $light-link-color: #0091ea;
 // ----------------------------------------------------------------------------
-// minimal dark-mode
+// mini dark-mode
 // ----------------------------------------------------------------------------
 // primary colors
 $dark-primary-color: #000;
