--- a/_includes/demo/list-six.html
+++ b/_includes/demo/list-six.html
@@ -57,8 +57,8 @@
                     </div>
                 </div>
             </li>
-            <li>
-                <div class="columns yolo-menu-item">
+            <li class="yolo-menu-item">
+                <div class="columns">
                     <div class="column is-narrow">
                         <span class="yolo-date">2022-11-11</span>
                         <span class="yolo-title">
@@ -66,17 +66,19 @@
                         </span>
                         <span class="yolo-description">Mon 11/07 to Fri 11/11</span>
                     </div>
+                </div>
+                <div class="columns">
                     <div class="column">
-                        <span>
-                          <a class="pill" href="/weeklies/2022/45/">#weekly-report</a>
-                          <a class="pill" href="/weeklies/2022/45/">#week-45</a>
-                          <a class="pill" href="/weeklies/2022/45/">#sprint</a>
+                        <span class="pills">
+                            <a class="pill" href="/weeklies/2022/45/">#weekly-report</a>
+                            <a class="pill" href="/weeklies/2022/45/">#week-45</a>
+                            <a class="pill" href="/weeklies/2022/45/">#sprint</a>
                         </span>
                     </div>
                 </div>
             </li>
-            <li>
-                <div class="columns yolo-menu-item">
+            <li class="yolo-menu-item">
+                <div class="columns">
                     <div class="column is-narrow">
                         <span class="yolo-date">2022-11-04</span>
                         <span class="yolo-title">
@@ -85,16 +87,21 @@
                         <span class="yolo-description">Mon 10/31 to Fri 11/04</span>
                     </div>
                     <div class="column">
-                    <span>
-                        <a class="pill" href="/weeklies/2022/44/">#weekly-report</a>
-                        <a class="pill" href="/weeklies/2022/44/">#week-44</a>
-                        <a class="pill" href="/weeklies/2022/44/">#sprint</a>
-                    </span>
+                        <img src="assets/images/me.png">
+                    </div>
+                </div>
+                <div class="columns">
+                    <div class="column">
+                        <span class="pills">
+                            <a class="pill" href="/weeklies/2022/44/">#weekly-report</a>
+                            <a class="pill" href="/weeklies/2022/44/">#week-44</a>
+                            <a class="pill" href="/weeklies/2022/44/">#sprint</a>
+                        </span>
                     </div>
                 </div>
             </li>
-            <li>
-                <div class="columns yolo-menu-item">
+            <li class="yolo-menu-item">
+                <div class="columns">
                     <div class="column is-narrow">
                         <span class="yolo-date">2022-09-08</span>
                         <span class="yolo-title">
@@ -106,9 +113,9 @@
                         <img src="assets/images/logo.png">
                     </div>
                 </div>
-                <div class="columns yolo-menu-item">
+                <div class="columns">
                     <div class="column">
-                        <span>
+                        <span class="pills">
                             <a class="pill" href="/samples/code-snippets/">#syntax-highlighting</a>
                             <a class="pill" href="/samples/code-snippets/">#code</a>
                             <a class="pill" href="/samples/code-snippets/">#css</a>
