WIP menu/list stylin

--- a/_includes/demo/list-six.html
+++ b/_includes/demo/list-six.html
@@ -1,125 +1,114 @@
 <div class="list-six">
     <section>
         <ul>
-            <li>
-                <div class="columns yolo-menu-item">
-                    <div class="column is-narrow">
+            <li class="yolo-menu-item">
+                <div class="columns">
+                    <div class="column">
+                        <span class="yolo-date">2022-12-20</span>
+                        <span class="yolo-title">
+                            <a href="/samples/flexbox/" title="fun-with-flexbox">samples/flexbox</a>
+                        </span>
+                        <span class="yolo-description">Fun with Flexbox</span>
+                    </div>
+                </div>
+            </li>
+            <li class="yolo-menu-item">
+                <div class="columns">
+                    <div class="column">
+                        <img src="assets/images/welcome-to-marfa.jpg" alt="welcome-to-marfa">
                         <span class="yolo-date">2022-12-10</span>
                         <span class="yolo-title">
                             <a href="/vacay/marfa/" title="Welcome to Marfa">vacay/marfa</a>
                         </span>
                         <span class="yolo-description">Welcome to Marfa!</span>
                     </div>
-                    <div class="column">
-                        <img src="assets/images/welcome-to-marfa.jpg" alt="welcome-to-marfa">
-<!--                        <span>-->
-<!--                          <a class="pill" href="/vacay/marfa/" title="Welcome to Marfa">#vacay</a>-->
-<!--                          <a class="pill" href="/vacay/marfa/" title="Welcome to Marfa">#texas</a>-->
-<!--                          <a class="pill" href="/vacay/marfa/" title="Welcome to Marfa">#photos</a>-->
-<!--                        </span>-->
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="columns yolo-menu-item">
-                    <div class="column is-narrow">
-                        <span class="yolo-date">2022-11-25</span>
-                        <span class="yolo-title">
-                            <a href="/weeklies/2022/47/" title="Mon 11/21 to Fri 11/25">week-47</a>
-                        </span>
-                        <span class="yolo-description">Mon 11/21 to Fri 11/25</span>
-                    </div>
-                    <div class="column">
-                        <img src="assets/images/me.png">
-                        <span>
-                            <a class="pill" href="/weeklies/2022/47/">#weekly-report</a>
-                            <a class="pill" href="/weeklies/2022/47/">#week-47</a>
-                            <a class="pill" href="/weeklies/2022/47/">#sprint</a>
-                        </span>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="columns yolo-menu-item">
-                    <div class="column is-narrow">
-                        <span class="yolo-date">2022-11-18</span>
-                        <span class="yolo-title">
-                          <a href="/weeklies/2022/46/" title="Mon 11/14 to Fri 11/18">week-46</a>
-                        </span>
-                        <span class="yolo-description">Mon 11/14 to Fri 11/18</span>
-                    </div>
-                    <div class="column">
-                        <span>
-                            <a class="pill" href="/weeklies/2022/46/">#weekly-report</a>
-                            <a class="pill" href="/weeklies/2022/46/">#week-46</a>
-                            <a class="pill" href="/weeklies/2022/46/">#sprint</a>
-                        </span>
-                    </div>
                 </div>
             </li>
             <li class="yolo-menu-item">
                 <div class="columns">
-                    <div class="column is-narrow">
+                    <div class="column">
                         <span class="yolo-date">2022-11-11</span>
                         <span class="yolo-title">
                             <a href="/weeklies/2022/45/" title="Mon 11/07 to Fri 11/11">week-45</a>
                         </span>
                         <span class="yolo-description">Mon 11/07 to Fri 11/11</span>
-                    </div>
-                </div>
-                <div class="columns">
-                    <div class="column">
-                        <span class="pills">
+                        <div class="pills">
                             <a class="pill" href="/weeklies/2022/45/">#weekly-report</a>
                             <a class="pill" href="/weeklies/2022/45/">#week-45</a>
                             <a class="pill" href="/weeklies/2022/45/">#sprint</a>
-                        </span>
+                            <a class="pill" href="/weeklies/2022/45/">#development</a>
+                        </div>
+                        <div style="clear: both"></div>
                     </div>
                 </div>
             </li>
             <li class="yolo-menu-item">
                 <div class="columns">
-                    <div class="column is-narrow">
+                    <div class="column">
+                        <span class="yolo-date">2022-11-10</span>
+                        <span class="yolo-title">
+                            <a href="/vacay/banff/" title="Banter in Banff">vacay/banff</a>
+                        </span>
+                        <span class="yolo-description">Cobro bantering in Banff</span>
+                        <div class="pills">
+                            <a class="pill" href="/vacay/banff/">#vacay</a>
+                            <a class="pill" href="/vacay/banff/">#banff</a>
+                            <a class="pill" href="/vacay/banff/">#canada</a>
+                            <a class="pill" href="/vacay/banff/">#goodtimes</a>
+                            <a class="pill" href="/vacay/banff/">#cobro</a>
+                            <a class="pill" href="/vacay/banff/">#moraine-lake</a>
+                            <a class="pill" href="/vacay/banff/">#lake-louise</a>
+                        </div>
+                        <div style="clear: both"></div>
+                    </div>
+                </div>
+            </li>
+            <li class="yolo-menu-item">
+                <div class="columns">
+                    <div class="column">
+                        <img src="assets/images/me.png">
                         <span class="yolo-date">2022-11-04</span>
                         <span class="yolo-title">
                             <a href="/weeklies/2022/44/" title="Mon 10/31 to Fri 11/04">week-44</a>
                         </span>
                         <span class="yolo-description">Mon 10/31 to Fri 11/04</span>
-                    </div>
-                    <div class="column">
-                        <img src="assets/images/me.png">
-                    </div>
-                </div>
-                <div class="columns">
-                    <div class="column">
-                        <span class="pills">
+                        <div class="pills">
                             <a class="pill" href="/weeklies/2022/44/">#weekly-report</a>
                             <a class="pill" href="/weeklies/2022/44/">#week-44</a>
                             <a class="pill" href="/weeklies/2022/44/">#sprint</a>
-                        </span>
+                        </div>
+                        <div style="clear: both"></div>
                     </div>
                 </div>
             </li>
             <li class="yolo-menu-item">
                 <div class="columns">
-                    <div class="column is-narrow">
+                    <div class="column">
+                        <img src="assets/images/snippet.jpg">
                         <span class="yolo-date">2022-09-08</span>
                         <span class="yolo-title">
                           <a href="/samples/code-snippets/" title="Yummo code highlighting and snippet copy">samples/code-snippets</a>
                         </span>
                         <span class="yolo-description">Yummo code highlighting and snippet copy</span>
-                    </div>
-                    <div class="column">
-                        <img src="assets/images/logo.png">
-                    </div>
-                </div>
-                <div class="columns">
-                    <div class="column">
-                        <span class="pills">
+                        <div class="pills">
                             <a class="pill" href="/samples/code-snippets/">#syntax-highlighting</a>
                             <a class="pill" href="/samples/code-snippets/">#code</a>
                             <a class="pill" href="/samples/code-snippets/">#css</a>
-                        </span>
+                            <a class="pill" href="/samples/code-snippets/">#snippets</a>
+                            <a class="pill" href="/samples/code-snippets/">#bash</a>
+                            <a class="pill" href="/samples/code-snippets/">#java</a>
+                            <a class="pill" href="/samples/code-snippets/">#javascript</a>
+                            <a class="pill" href="/samples/code-snippets/">#json</a>
+                            <a class="pill" href="/samples/code-snippets/">#kotlin</a>
+                            <a class="pill" href="/samples/code-snippets/">#python</a>
+                            <a class="pill" href="/samples/code-snippets/">#c</a>
+                            <a class="pill" href="/samples/code-snippets/">#c++</a>
+                            <a class="pill" href="/samples/code-snippets/">#html</a>
+                            <a class="pill" href="/samples/code-snippets/">#yaml</a>
+                            <a class="pill" href="/samples/code-snippets/">#dart</a>
+                            <a class="pill" href="/samples/code-snippets/">#go</a>
+                        </div>
+                        <div style="clear: both"></div>
                     </div>
                 </div>
             </li>
