--- a/_sass/yolo/core/_layout.scss
+++ b/_sass/yolo/core/_layout.scss
@@ -35,6 +35,7 @@
 // ----------------------------------------------------------------------------
 .container {
   max-width: 48rem;
+  min-width: 16rem;
   padding-left: 3rem;
   padding-right: 3rem;
   margin-left:  auto;
